# TinySoundFontUnity

./: .gitignore  README.md
Plugins/MacOS/tsf_unity.bundle/Contents/MacOs/: tsf_unity
Plugins/src/: CMakeLists.txt  conanfile.txt  ezaudio.h  tsf_unity.cpp  tsf_unity.h
Plugins/src/test~/: tsf_unity_test.cpp
Prefabs/: TinySoundFont.prefab
Sample/: SampleController.cs  SampleUi.cs  TinySoundFontSample.unity
Scripts/: Exception.cs  Native.cs  Plugin.cs  SoundFont.cs  TinySoundFont.cs
src~/: CMakeLists.txt  conanfile.txt  tsf_unity.cpp  tsf_unity_test.cpp
